[gd_scene load_steps=3 format=3 uid="uid://cl3cqk1xokegj"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_ms8nk"]
[ext_resource type="FontFile" uid="uid://b60hkvr2gctru" path="res://Sprites/Crang.ttf" id="2_0ilnx"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ms8nk")

[node name="PanelContainer" type="PanelContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -50.5
offset_right = 77.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0ilnx")
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0ilnx")
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0ilnx")
theme_override_font_sizes/font_size = 30
text = "Quit to Main menu"

[node name="save_button" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Save Game"

[node name="load_button" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Load Game
"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0ilnx")
theme_override_font_sizes/font_size = 25
text = "Volume on/off"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
