[gd_scene load_steps=3 format=3 uid="uid://7c8vsln15g1"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_ciyfb"]
[ext_resource type="Texture2D" uid="uid://b5ugnaw4ih0sh" path="res://Sprites/pause-button-icon-1024x1024-yynpsfdy.png" id="1_j1m0f"]

[node name="pausebtn" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ciyfb")

[node name="screenPauseBtn" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1032.0
offset_bottom = 1032.0
icon = ExtResource("1_j1m0f")

[connection signal="pressed" from="screenPauseBtn" to="." method="_on_screen_pause_btn_pressed"]
